--- a/_config.yml
+++ b/_config.yml
@@ -19,21 +19,20 @@
 # in the templates via {{ site.myvariable }}.
 
 title: DaJoana Cosmética Natural - Blog
-email: your-email@example.com
-description: >- # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
-baseurl: "" # the subpath of your site, e.g. /blog
-url: "" # the base hostname & protocol for your site, e.g. http://example.com
-twitter_username: jekyllrb
-github_username:  jekyll
+email: cosmeticanatural_formacao@dajoana.com
+description: >-
+  Blog dedicado à cosmética natural artesanal, onde partilho formulações, ingredientes e dicas para criar os seus próprios cosméticos de forma consciente e segura.
+
+baseurl: '/blog'
+url: 'https://www.dajoana.com' # inclui https para SEO e validação
+
+twitter_username: dajoana_cosmetica
+github_username: susanaDaj4n4
 
 # Build settings
 theme: minima
 plugins:
   - jekyll-feed
-
 # Exclude from processing.
 # The following items will not be processed, by default.
 # Any item listed under the `exclude:` key here will be automatically added to
